public/stylesheets/main.css
html {
	height 100%;
}

html > body {
	color: white;
}

body {
  padding: 0px;
  margin: 0px;
	background-repeat: no-repeat !important;
	background-size: cover !important;
  background-attachment: fixed !important;
  background-color: #B22222 !important;
  -webkit-transition: background-image 1.5s linear;
  -moz-transition: background-image 1.5s linear;
  -o-transition: background-image 1.5s linear;
  -ms-transition: background-image 1.5s linear;
  transition: background-image 1.5s linear;
}

.body-wrapper {
  min-height: 100vh;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 0px;
}

#main-content-wrapper {
	max-width: 1500px;
  margin: auto;
  padding: 8px;
}

.dark-bg {
	background-color: rgba(30,30,30,0.98);
	border: solid #a22 2px;
}

footer {
	min-height: 100px;
  background-color: #444
}

#footer-content {
	padding: 16px;
}

header {
	font-size: 30px;
	background-color: #333;
	font-size: 0px
}

header a {
	padding: 10px;
  display: inline-block;
	border-bottom: 3px solid black;
	font-size: 30px;
}

a:link, a:visited {
	color: white;
	text-decoration: none;
}

a:hover, a.active{
	border-bottom: 3px solid #a22;
  color: inherit !important;
  text-decoration: inherit !important;
}

.twitter-timeline {
	float: right;
	max-height: 600px;
}

h1 {
	text-shadow: black 0px 0px 2px, black 0px 0px 4px, red 0px 0px 6px, red 0px 0px 8px;
	font-size: 40px;
}

.main-header-container {
  border-radius: 30px;
  padding: 5px 50px 5px 50px;
}

.community-image{
	width: 100%;
	display: block;
	transition:transform 0.35s;
}

@media (min-width: 1200px) {
	img:hover {
	    -webkit-transform:scale(1.5);
	    transform:scale(1.5);
	}
}

#live-stream-box{
	width: 100%;
}

.youtube-video-container {
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.youtube-video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

